uprava na hhodine

--- a/views/index/index.twig
+++ b/views/index/index.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="text-center">
-        <h1>Vitajte na stránke pre nájdenie perfektnej akcie!</h1>
-        <p1>Môžete si u nás pozrieť konajúce sa podujatia po celom Slovensku!</p1>
+        <h1>Vitajte na stránke OurPHP</h1>
+        <p1>Kde si môžete vytvorit tabulku, možno!</p1>
     </div>
 {% endblock%}
