--- a/views/index/vytvortabulku.twig
+++ b/views/index/vytvortabulku.twig
@@ -21,6 +21,8 @@
         <input type="number" id="row" name="row" class="form-input" placeholder="0">
         <label for="column">Column:</label>
         <input type="number" id="column" name="column" class="form-input" placeholder="0">
+        <label for="name">Name:</label>
+        <input type="string" id="name" name="name" class="form-input" placeholder="nazov tabulky">
     </form>
 
     <table id="myTable" border="1" style="width: 50%; height: 100px;">
@@ -141,9 +143,11 @@
             var table = document.getElementById("myTable");
             var selectedRow = document.getElementById("row").value;
             var selectedCol = document.getElementById("column").value;
+            var name = document.getElementById("name").value;
             var headers = document.getElementById("value")?.value.split(";") || [];
             var vystup = document.getElementById("vystup");
             vystup.innerHTML = "CREATE TABLE TABLE";
+            console.log("CREATE TABLE name")
 
             if (headers.length > 0) {
                 vystup.innerHTML += "(" + headers.join(",") + ")" + ";";
