--- a/views/index/vytvortabulku.twig
+++ b/views/index/vytvortabulku.twig
@@ -11,11 +11,6 @@
     </style>
     <h2 class="text-center">Vytvor tabuľku</h2>
     <form method="POST" action="script.js" class="text-center" onsubmit="event.preventDefault();">
-        <button type="submit" name="action" value="update">Update</button>
-        <button type="submit" name="action" value="insert">Insert</button>
-        <button type="submit" name="action" value="delete">Delete</button>
-        <button type="submit" name="action" value="drop">Drop</button>
-        <button type="submit" name="action" value="select">Select</button>
         <br><br>
         <label for="row">Row:</label>
         <input type="number" id="row" name="row" class="form-input" placeholder="0">
@@ -40,11 +35,9 @@
     </table>
 
     <div class="text-center mt-3">
-        <button type="button" id="btnInsert">Insert</button>
-        <button type="button" id="btnUpdate">Update</button>
-        <button type="button" id="btnDelete">Delete</button>
         <button type="button" id="btnDrop">Drop</button>
         <button type="button" id="btnCreate">Create</button>
+        <button type="button" id="btnInsert">addRow</button>
     </div>
 
     <p id="vystup" class="text-center"></p>
@@ -52,50 +45,20 @@
     <script>
         function addRow() {
             var table = document.getElementById("myTable");
-            var selectedRow = document.getElementById("row").value;
-            var selectedCol = document.getElementById("column").value;
             var vstup = document.getElementById("vystup");
 
             // ak nie sú vybraté žiadne riadky alebo stĺpce, pridaj nový riadok na koniec tabuľky
-            if (selectedRow === 0 || selectedCol === 0) {
-                var newRow = table.insertRow(table.rows.length);
-                for (var i = 0; i < table.rows[0].cells.length; i++) {
-                    var newCell = newRow.insertCell(i);
-                    newCell.innerHTML = "<input type='text' name='data[" + table.rows.length + "][" + (i + 1) + "]' value='' style='border: 0; outline: 0; width: 100%; height: 100%;' readonly>";
-                    newCell.style.border = "1px solid black";
-                    newCell.style.padding = "5px";
-                }
-                vstup.innerHTML = "INSERT INTO TABLE DEFAULT VALUES;"
-                return;
+
+            var newRow = table.insertRow(table.rows.length);
+            for (var i = 0; i < table.rows[0].cells.length; i++) {
+                var newCell = newRow.insertCell(i);
+                newCell.innerHTML = "<input type='text' name='data[" + table.rows.length + "][" + (i + 1) + "]' value='' style='border: 0; outline: 0; width: 100%; height: 100%;'>";
+                newCell.style.border = "1px solid black";
+                newCell.style.padding = "5px";
             }
-
-            // ak bol zvolený riadok, pridaj hodnoty do vybraného riadka
-            var stlpec = "(" + selectedCol + ")";
-            if (selectedRow > 0) {
-                var row = table.rows[selectedRow - 1];
-                var values = document.getElementById("value").value.split(";");
-                for (var j = 0; j < values.length; j++) {
-                    var value = values[j].trim();
-                    if (selectedCol === 0) {
-                        row.insertCell(row.cells.length);
-                        selectedCol = row.cells.length;
-                    }
-                    var cell = row.cells[selectedCol - 1];
-                    cell.innerHTML = "<input type='text' name='data[" + selectedRow + "][" + selectedCol + "]' value='" + value + "' style='border: 0; outline: 0; width: 100%; height: 100%;' readonly>";
-                    cell.style.border = "1px solid black";
-                    cell.style.padding = "5px";
-                    if(selectedRow === selectedCol){
-                        vstup.innerHTML = "INSERT INTO TABLE" + stlpec + "VALUES" + "(" + values + ")" + ";";
-                    }
-                    else{
-
-                        vstup.innerHTML = "INSERT INTO TABLE VALUES" + "(" + values + ")" + ";";
-                    }
-                    selectedCol++;
+            vstup.innerHTML = "INSERT INTO TABLE DEFAULT VALUES;";
 
 
-                }
-            }
         }
 
         function onCellValueChanged(row, col, value) {
@@ -146,8 +109,8 @@
             var name = document.getElementById("name").value;
             var headers = document.getElementById("value")?.value.split(";") || [];
             var vystup = document.getElementById("vystup");
-            vystup.innerHTML = "CREATE TABLE TABLE";
-            console.log("CREATE TABLE name")
+            vystup.innerHTML = "CREATE TABLE " + name + ";"
+            console.log("CREATE TABLE " + name + ";")
 
             if (headers.length > 0) {
                 vystup.innerHTML += "(" + headers.join(",") + ")" + ";";
