Updated old code

--- a/views/index/index.twig
+++ b/views/index/index.twig
@@ -3,6 +3,6 @@
 {% block content %}
     <div class="text-center">
         <h1>Vitajte na stránke OurPHP</h1>
-        <p1>Kde si môžete vytvorit tabulku, možno!</p1>
+        <p1>Kde si môžete vytvorit tabulku, jednoducho a rýchlo.</p1>
     </div>
 {% endblock%}
