--- a/views/index/vytvortabulku.twig
+++ b/views/index/vytvortabulku.twig
@@ -1,5 +1,7 @@
 {% extends '../base.twig' %}
+{% import "index/script.js" as function %}
 {% block content %}
+
     <style>
         /* Custom CSS */
         #myTable {
@@ -17,7 +19,8 @@
         <label for="column">Column:</label>
         <input type="number" id="column" name="column" class="form-input" placeholder="0" min="0">
         <label for="name">Name:</label>
-        <input type="string" id="name" name="name" class="form-input" placeholder="nazov tabulky" required>
+        <input type="text" id="name" name="name" class="form-input" placeholder="nazov tabulky" required>
+
     </form>
 
     <script>
@@ -71,7 +74,10 @@
 
     <p id="vystup" class="text-center"></p>
 
+
     <script>
+
+
         function addRow() {
             var table = document.getElementById("myTable");
             var vstup = document.getElementById("vystup");
@@ -130,7 +136,7 @@
                 return "VARCHAR";
             }
         }
-
+        //<input type="text" id="vstup" name="vstup" class="form-input" placeholder="nazov tabulky" required>
         function createTable() {
             var name = document.getElementById("name").value;
             if (!name) {
@@ -142,8 +148,12 @@
             var selectedCol = document.getElementById("column").value;
             var headers = document.getElementById("value")?.value.split(";") || [];
             var vystup = document.getElementById("vystup");
-            vystup.innerHTML = "CREATE TABLE " + name
+            vystup.innerHTML = "CREATE TABLE " + name;
             console.log("CREATE TABLE " + name + ";")
+
+            let values = "";
+
+
 
             if (headers.length > 0) {
                 vystup.innerHTML += "(" + headers.join(",") + ")" + ";";
@@ -164,8 +174,8 @@
                         value = headers[j];
                     } else if (i === 0) {
                         value = 'column' + (j + 1);
+                        values += value + " VARCHAR(50),";
                     }
-
                     var input = document.createElement('input');
                     input.type = 'text';
                     input.name = 'data[' + (i + 1) + '][' + (j + 1) + ']';
@@ -194,8 +204,14 @@
                     cell.appendChild(input);
                     cell.style.border = '1px solid black';
                     cell.style.padding = '5px';
+
                 }
+
             }
+            console.log(value);
+            console.log(values);
+            {{  }}
+
         }
 
         function dropTable() {
@@ -232,3 +248,6 @@
     </script>
 
 {% endblock %}
+
+
+
