Updated old code

--- a/views/base.twig
+++ b/views/base.twig
@@ -32,6 +32,12 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/vytvor">Vytvor tabuľku</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/podujatia">Podujatia</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/vytvorpodujatie">Vytvor Podujatie</a>
+                        </li>
                     {% endif %}
 
                 </ul>
